# pinocchio_tutorial

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.py
ur5/urdf/: ur5_robot.urdf  ur5_robot2.urdf  ur5_robot3.urdf
urdf/: ur5_robot.urdf
